# simple-plants

./: README.md  compose.yml  main.py  pyproject.toml
db/models/: base.py  plant.py  plants.py
db/sql/: plants.sql
models/: plant.py
queries/: query_plants.py
