[tool.poetry]
name = "simple-plants"
version = "0.1.0"
description = ""
authors = ["Andrew Kittrell <a.r.kittrell@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
